--- a/css/style.css
+++ b/css/style.css
@@ -18,9 +18,38 @@ p {
 .sidebar {
   margin-top: 80px;
   height: 90%;
-  width: 180px;
+  width: 150px;
   float: left;
   position: absolute;
   background-color: orange;
   padding: 10px;
+}
+
+form {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  font-weight: bold;
+}
+
+input {
+  margin-top: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  width: 50px;
+  height: 20px;
+  font-weight: bold;
+}
+
+input[type=submit] {
+  border: none;
+  background-color: black;
+  color: white;
+  width: 50px;
+  height: 30px;
+}
+
+input[type=submit]:hover {
+  border: 1px solid white;
 }
