--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ form {
   font-weight: bold;
 }
 
-input {
+input, .submit {
   margin-top: 10px;
   margin-left: auto;
   margin-right: auto;
@@ -42,7 +42,7 @@ input {
   font-weight: bold;
 }
 
-input[type=submit] {
+.submit {
   border: none;
   background-color: black;
   color: white;
@@ -50,6 +50,6 @@ input[type=submit] {
   height: 30px;
 }
 
-input[type=submit]:hover {
+.submit:hover {
   border: 1px solid white;
 }
