--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+body {
+  text-align: center;
+}
+
 .header {
   width: 100%;
   height: 80px;
@@ -52,4 +56,13 @@ input, .submit {
 
 .submit:hover {
   border: 1px solid white;
+}
+
+.pad {
+  position: absolute;
+  width: 800px;
+  height: 800px;
+  top: 30%;
+  left: 40%;
+  margin: -100px 0 0 -180px;
 }
